Add signin link

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,8 @@
 
 <body>
 	<h2>
+		<a href='{{url_for('userSignin')}}'>Sign In</a>
+		<br>
 		<a href='{{url_for('newUser')}}'>Create User</a>
 	</h2>
 
