No changes were made

--- a/templates/newUser.html
+++ b/templates/newUser.html
@@ -17,7 +17,7 @@
 		Username: <input type="text" name="Username">
 		<br>
 		Picture: <input type="file" name="picture" id="pictureFile">
-		<button type="button" id = "buttonReset" onclick="resetFile($('#pictureFile'))">Reset file</button>
+		<button type="button" id = "buttonReset" onclick="resetFile($('#pictureFile'))">Clear Picture</button>
 
 		</p>
 		<input type="submit" name="create" value="Create">
