--- a/templates/bookList.html
+++ b/templates/bookList.html
@@ -6,7 +6,9 @@
 <body>
 	<h1>Books</h1>
 	<h2>
-	<a href = '{{url_for('newBook')}}'>Add New Book</a>
+		<a href="{{url_for('login')}}">Login</a>
+		<br>
+		<a href = '{{url_for('newBook')}}'>Add New Book</a>
 	</h2>
 
 
