Adjust picture size

--- a/templates/userInfoPage.html
+++ b/templates/userInfoPage.html
@@ -10,8 +10,11 @@
 	<br>
 	<p>Email: {{user.email}}
 	<br>
-	<img src="{{user.picture}}" alt="Profile Picture">
+	<object data="{{user.picture}}" style="width:150px;height:150px;">
+		<img src="https://i.stack.imgur.com/34AD2.jpg" style="width:150px;height:150px;" />
+	</object>
 	<br>
-</p>
+	</p>
+	
 </body>
 </html>
