Add ForumList link

--- a/templates/bookList.html
+++ b/templates/bookList.html
@@ -9,6 +9,8 @@
 		<a href="{{url_for('login')}}">Login</a>
 		<br>
 		<a href = '{{url_for('newBook')}}'>Add New Book</a>
+		<br>
+		<a href="{{url_for('forumList')}}">Forums</a>
 	</h2>
 
 
