--- a/templates/forum.html
+++ b/templates/forum.html
@@ -4,7 +4,7 @@
 	<title>Book Review Forum</title>
 </head>
 <body>
-	<h1>Forum</h1>
+	<h1>{{forum.title}}</h1>
 	<form action="{{url_for('forum', forum_id = forum.id)}}" method="post">
 		<input type="text" name="content" id="content">
 		<input type="submit" name="submit">
@@ -15,6 +15,6 @@
 		<br>
 		{% endfor %}
 	</form>
-	<a href="{{url_for('bookList')}}">Book List</a>
+	<a href="{{url_for('forumList')}}">Forum List</a>
 </body>
 </html>
