--- a/templates/editBook.html
+++ b/templates/editBook.html
@@ -33,6 +33,12 @@
 			<input type="text" name="summary" size="200" placeholder="{{editBook.summary}}">
 		<br>
 		<br>
+			Picture URL:
+		<br>
+			<input type="text" name="picture" placeholder="{{editBook.picture}}">
+		
+		<br>	
+		<br>
 			<input type='submit' value="Edit">
 
 
