--- a/templates/newBook.html
+++ b/templates/newBook.html
@@ -21,9 +21,13 @@
 			<input type="text" size="100" name="category">
 			<br>
 			<p>Summary</p>
-			<input type="text" size="400" name="summary">
+			<input type="text" size="100" name="summary">
+			<p>Picture URL: </p>
+			<input type="text" size="100" name="picture">
+			<br>
 
 			<input type="submit" value="Add">
+			<a href="{{url_for('bookList')}}">Cancel</a>
 		</form>
 	</body>
 	</html>
