--- a/templates/bookForumList.html
+++ b/templates/bookForumList.html
@@ -4,10 +4,13 @@
 	<title></title>
 </head>
 <body>
+	<a href="{{url_for('forumList')}}">Forums</a>
 	<h1>{{book.title}}</h1>
 	{% for forum in forums %}
-	{{forum.title}}
-	<br>
+	<p>
+	<a href='{{url_for('forum', forum_id = forum.id) }}'>{{forum.title}}</a>
+	</p>
 	{% endfor %}
+
 </body>
 </html>
