--- a/templates/userInfoPage.html
+++ b/templates/userInfoPage.html
@@ -14,6 +14,7 @@
 		<img src="https://i.stack.imgur.com/34AD2.jpg" style="width:150px;height:150px;" />
 	</object>
 	<br>
+	<a href='{{url_for('editUser', user_id = user.id) }}'>Edit User</a>
 	</p>
 	
 </body>
