Change picture input from file to text

--- a/templates/editUser.html
+++ b/templates/editUser.html
@@ -19,12 +19,12 @@
 		<br>
 			Password:
 		<br>
-			<input type="text" name="password" placeholder="{{editUser.password}}">
+			<input type="text" name="password">
 		<br>
 		<br>
-			Picture:
+			Picture URL:
 		<br>
-			<input type="text" name="picture" placeholder="{{editUser.picture}}">
+		 <input type="text" name="picture" placeholder="{{editUser.picture}}">
 		
 		<br>	
 		<br>
