Add Usernames to ForumContent, add a publicBooklist for people not signed in

--- a/templates/BookInfo.html
+++ b/templates/BookInfo.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>{{book.title}} Information</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1>{{book.title}}</h1>
