--- a/templates/bookForumList.html
+++ b/templates/bookForumList.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<a href="{{url_for('forumList')}}">Forums</a>
