--- a/templates/deleteBook.html
+++ b/templates/deleteBook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page to Delete Book</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1> Are you sure you want to delete {{bookToDelete.title}}?</h1>
