--- a/templates/editBook.html
+++ b/templates/editBook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page to edit a Book</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1>Edit Book</h1>
