--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 	</script>
 	<script src="//apis.google.com/js/platform.js?onload=start" async defer>
 	</script>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 
 <body>
