--- a/templates/newBook.html
+++ b/templates/newBook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Add New Books to the Web App</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 	</head>
 	<body>
 		<h1>New Book</h1>
