--- a/templates/newUser.html
+++ b/templates/newUser.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Create New User</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1>New user</h1>
