--- a/templates/newUserAuth.html
+++ b/templates/newUserAuth.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>New User Authentication</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1>New User Authentication</h1>
