--- a/templates/userInfoPage.html
+++ b/templates/userInfoPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>User Profile Page</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<form action="" method="post" enctype="multipart/form-data">
