--- a/templates/editUser.html
+++ b/templates/editUser.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page to edit a User</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<h1>Edit User</h1>
