--- a/templates/userSignin.html
+++ b/templates/userSignin.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>User Signin</title>
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 	<form action='{{url_for('userSignin')}}' method='post'>
