--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 body {
 	background-color: rgb(255, 238, 205);
 	text-align: center;
+	margin-top: 50px;
 }
 
 #forumContent {
@@ -11,6 +12,49 @@ body {
 	text-align: center;
 }
 
-#forumDateTime{
+#forumDateTime {
 	text-align: right;
+}
+
+#UserNameShown {
+	text-align: right;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+li {
+	float: left;
+	border-right: 1px solid #bbb;
+}
+
+li:last-child {
+	border-right: none;
+	border-left: 1px solid #bbb;
+	float: right;
+}
+
+li a {
+	display: inline-block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+li a:hover {
+	background-color: #111;
+}
+
+
+.active {
+	background-color: #4CAF50;
 }
