--- a/templates/forumList.html
+++ b/templates/forumList.html
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
+	<ul>
+		<li><a  href="{{url_for('bookList')}}">Home</a></li>
+		<li><a href = '{{url_for('newBook')}}'>Add New Book</a></li>
+		<li><a href="{{url_for('forumList')}}" class="active">Forums</a></li>
+		<li><a href="{{url_for('userPage', user_id = user.id)}}">{{user.name}}</a></li>
+	</ul>
 	<h1>Forums</h1>
-	<h2>
-		<a href="{{url_for('login')}}">Login</a>
-		<br>
-		<a href = '{{url_for('bookList')}}'>Book List</a>
-	</h2>
 <form action="{{url_for('forumList')}}" method="post">
 	<p>
 		New Forum: <input type="text" name="newForum">
