--- a/templates/newUserAuth.html
+++ b/templates/newUserAuth.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
+	<ul>
+		<li><a class="active" href="{{url_for('bookList')}}">Home</a></li>
+		<li><a href = '{{url_for('newBook')}}'>Add New Book</a></li>
+		<li><a href="{{url_for('forumList')}}">Forums</a></li>
+		<li style="float: right;"><a href="{{url_for('login')}}">Login</a></li>
+	</ul>
 	<h1>New User Authentication</h1>
 
 	<form action = '{{url_for('newUserAuth')}}' method="post">
