--- a/static/styles.css
+++ b/static/styles.css
@@ -25,7 +25,7 @@ ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #333;
+	background-color: #414141;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -56,5 +56,5 @@ li a:hover {
 
 
 .active {
-	background-color: #4CAF50;
+	background-color:  #cc7800;
 }
